обновление до текущего состояния

--- a/areas/areas/arlend/rooms.yml
+++ b/areas/areas/arlend/rooms.yml
@@ -219,6 +219,7 @@
       direction: юг
 - id: park1
   title: "Городской парк"
+  type: ['луг', 'лес']
   description: >-
     Здесь, в окружении стройных цветущих деревьев, царит покой и умиротворение,
     поэтому неудивительно, что городской парк является излюбленным местом отдыха
@@ -233,6 +234,7 @@
     - roomId: "arlend:street2"
       direction: юг
 - id: park2
+  type: ['луг', 'лес']
   title: "Городской парк"
   description: >-
     Похоже, что жители этого города просто обожают фонтаны, по крайней мере
@@ -253,6 +255,7 @@
       direction: запад
 - id: park3
   title: "Городской парк"
+  type: ['луг', 'лес']
   description: >-
     Вы находитесь среди аккуратных разноцветных клумб, на которых старательные
     садовники попытались изобразить знаковые для жителей этого города символы.
@@ -264,6 +267,7 @@
       direction: юг
 - id: park4
   title: "Городской парк"
+  type: ['луг', 'лес']
   description: >-
     Тут вдоль выложенных камнем дорожек в два ряда: слева и справа установлены
     одинаковые удобные скамейки, так что прогулка по парку не будет в тягость
@@ -277,6 +281,7 @@
       direction: восток
 - id: park5
   title: "Около беседки"
+  type: ['луг', 'лес']
   description: >-
     Вы остановились перед прелестной белой беседкой, установленной в этой
     части парка. У нее тонкие изящные колонны, до половины обвитые зелеными
@@ -1014,6 +1019,7 @@
       direction: вниз
 - id: cave1
   title: "Начало пещер"
+  type: ['пещера']
   description: >-
     Наверху, куда ведут вырубленные в граните каменные ступени, виднеется светлый 
     проем, ведущий, вероятно, на поверхность, прочь из этих мрачных пещер, грозящих в 
@@ -1028,6 +1034,7 @@
       direction: запад
 - id: cave2
   title: "Широкий туннель"
+  type: ['пещера']
   description: >-
     Вы находитесь в широком туннеле ведущим откуда-то с запада на восток, где 
     ощущается слабое дуновение сквозняка. Вероятно, там есть выход наружу, о чем 
@@ -1042,6 +1049,7 @@
       direction: юг
 - id: cave30
   title: "Тупик"
+  type: ['пещера']
   description: >-
     Здесь, совершенно неожиданно, пещера упирается в сплошную каменную стену, 
     откуда, совершенно непонятным образом, сочится вода, образующая небольшой ручей. 
@@ -1052,6 +1060,7 @@
       direction: север
 - id: cave26
   title: "Широкий туннель"
+  type: ['пещера']
   description: >-
     Часто с потолка свисают массивные гранитные глыбы, не позволяющие выпрямиться во 
     весь рост. Удивительно, но эти глыбы часто испещрены глубокими выемками и 
@@ -1064,6 +1073,7 @@
       direction: запад
 - id: cave24
   title: "Поворот"
+  type: ['пещера']
   description: >-
     Здесь туннель поворачивает на восток, продолжая следовать за образовавшим его 
     ручьем, так же, тут есть проход и на север, уводящий с основного пути.
@@ -1077,6 +1087,7 @@
       direction: юг
 - id: cave25
   title: "Грот"
+  type: ['пещера']
   description: >-
     Большую часть грота занимает подземное озеро с настолько чистой водой, что на 
     его дне без труда можно рассмотреть мельчайший камешек. Берег озера густо порос 
@@ -1089,6 +1100,7 @@
       direction: юг
 - id: cave22
   title: "Развилка пещер"
+  type: ['пещера']
   description: >-
     В этом месте основной, широкий туннель пересекается с пещерой помельче, где 
     царит кромешная тьма. По-видимому, там не так много этих странных, светящихся 
@@ -1103,6 +1115,7 @@
       direction: юг
 - id: cave23
   title: "Большая пещера"
+  type: ['пещера']
   description: >-
     Границы этой огромной пещеры теряются где-то во тьме. Каждый шаг здесь 
     сопровождается долгим, гулким эхом. На западе путь преграждает завал, откуда, если 
@@ -1116,6 +1129,7 @@
       direction: восток
 - id: cave32
   title: "Берлога"
+  type: ['пещера']
   description: >-
     По полу этой пещеры раскиданы обглоданные кости различных крупных животных. 
     Такое мог оставить только очень сильный и опасный хищник, и если вы еще не 
@@ -1129,6 +1143,7 @@
       direction: восток
 - id: cave21
   title: "Широкий туннель"
+  type: ['пещера']
   description: >-
     Туннель следует вдоль небольшого ручья, который, вероятно, за долгие столетия и 
     пробил в толще скал эти пещеры. Время от времени дорога обходит большие валуны, не 
@@ -1142,6 +1157,7 @@
       direction: восток
 - id: cave20
   title: "Широкий туннель"
+  type: ['пещера']
   description: >-
     Вероятно, первоначально это была пещера, образованная естественным путем, но 
     затем ее кто-то расширил, стены и потолок укрепил деревянными балками, а также 
@@ -1154,6 +1170,7 @@
       direction: юг
 - id: cave19
   title: "Вход в пещеру"
+  type: ['пещера']
   description: >-
     Вход в пещеру достаточно высок, чтобы в нее мог заехать всадник верхом на 
     лошади. Но, кто может сказать, что там дальше внутри. С юга брезжит слабый свет, 
