--- a/areas/areas/crypt/rooms.yml
+++ b/areas/areas/crypt/rooms.yml
@@ -421,6 +421,7 @@
       direction: запад
 - id: 850025
   title: "Секретный проход"
+  type: ['пещера']
   description: >-
     Вы находитесь в секретном проходе, ведущем на север. Серые каменные стены
     покрывают толстые слои паутины и мха. Поднимающаяся при шаге пыль с пола делает
@@ -434,6 +435,7 @@
       direction: юг
 - id: 850026
   title: "Секретный проход"
+  type: ['пещера']
   description: >-
     Здесь от основного прохода, продолжающегося с юга на север, отходит на восток
     боковое отверстие поуже. Оно выглядит очень подозрительным из-за большого
@@ -450,6 +452,7 @@
       direction: юг
 - id: 850027
   title: "Секретный проход"
+  type: ['пещера']
   description: >-
     Вы остановились перед широким проходом на западе, откуда сочится неяркий
     свет. На стенах вокруг высечены странные иероглифы, некоторые из которых из-за
@@ -491,6 +494,7 @@
       direction: восток
 - id: 850030
   title: "Кладбище"
+  type: ['луг']
   description: >-
     Вы на кладбище. Унылые надгробия и памятники вокруг украшены множеством
     восхитительных цветов. За этим местом присматривают набожные монахини, которые
@@ -560,6 +564,7 @@
       direction: север
 - id: 850035
   title: "Маленький садик"
+  type: ['луг']
   description: >-
     Вы зашли в маленький, но очень ухоженный садик, в котором чувствуется рука
     умелого садовника. На аккуратных газонах вы видите множество неброских, но
@@ -570,6 +575,7 @@
       direction: юг
 - id: 850036
   title: "Кладбище"
+  type: ['луг']
   description: >-
     Хотя это самое ухоженное кладбище из всех, которые вам доводилось видеть.
     От вида многочисленных надгробий душа постепенно погружается в печаль. Не
@@ -765,6 +771,7 @@
       direction: вниз
 - id: 850046
   title: "Древние катакомбы"
+  type: ['пещера']
   description: >-
     Вы находитесь в начале древних катакомб, мрачные туннели которых простираются
     во тьме дальше на восток. Мокрые стены этих коридоров и их потолок покрыты
@@ -781,6 +788,7 @@
       direction: вверх
 - id: 850047
   title: "Пересечение туннелей"
+  type: ['пещера']
   description: >-
     Отсюда во всех направлениях уходят одинаковые мрачные туннели катакомб,
     созданных, по-видимому, в незапамятные времена для захоронения усопших.
@@ -798,6 +806,7 @@
       direction: запад
 - id: 850048
   title: "Западный туннель"
+  type: ['пещера']
   description: >-
     Некогда ровный пол туннеля, продолжающегося с запада на восток, испещрен
     многочисленными выбоинами, о которые чтобы не переломать все ноги, потребуется
@@ -811,6 +820,7 @@
       direction: запад
 - id: 850049
   title: "Пересечение туннелей"
+  type: ['пещера']
   description: >-
     Отсюда, из центра катакомб, во всех направлениях уходят одинаковые мрачные
     туннели катакомб, созданных, по-видимому, в незапамятные времена для
@@ -832,6 +842,7 @@
       direction: запад
 - id: 850050
   title: "Восточный туннель"
+  type: ['пещера']
   description: >-
     Некогда ровный пол туннеля, продолжающегося с запада на восток, испещрен
     многочисленными выбоинами, о которые чтобы не переломать все ноги, потребуется
@@ -845,6 +856,7 @@
       direction: запад
 - id: 850051
   title: "Пересечение туннелей"
+  type: ['пещера']
   description: >-
     Отсюда во всех направлениях уходят одинаковые мрачные туннели катакомб,
     созданных, по-видимому, в незапамятные времена для захоронения усопших,
@@ -861,6 +873,7 @@
       direction: запад
 - id: 850052
   title: "Восточный тупик"
+  type: ['пещера']
   description: >-
     Вы находитесь в небольшой комнатке, бывшей когда-то, по-видимому, гробницей.
     Правда время не пощадило ее, и от гробов или саркофагов не осталось и следа.
@@ -873,6 +886,7 @@
       direction: запад
 - id: 850053
   title: "Северный туннель"
+  type: ['пещера']
   description: >-
     Судя по всему, эти катакомбы были заброшены много столетий назад. Вскоре
     после этого здесь нашли прибежище всякие мерзкие твари, размножившиеся в
@@ -887,6 +901,7 @@
       direction: юг
 - id: 850054
   title: "Пересечение туннелей"
+  type: ['пещера']
   description: >-
     Отсюда во всех направлениях уходят одинаковые мрачные туннели катакомб,
     созданных, по-видимому, в незапамятные времена для захоронения усопших.
@@ -903,6 +918,7 @@
       direction: запад
 - id: 850055
   title: "Северный тупик"
+  type: ['пещера']
   description: >-
     Здесь ваш путь преграждает огромный завал из камней, видимо тут несколько
     лет назад обвалился потолок, что неудивительно, учитывая в каком состоянии
@@ -916,6 +932,7 @@
       direction: юг
 - id: 850056
   title: "Южный туннель"
+  type: ['пещера']
   description: >-
     Этот узкий туннель тянется с юга на север. Сложно сказать, куда он ведет,
     так как его концы теряются в непроглядной тьме. В жиже, под ногами, с визгом
@@ -930,6 +947,7 @@
       direction: юг
 - id: 850057
   title: "Пересечение туннелей"
+  type: ['пещера']
   description: >-
     Отсюда во всех направлениях уходят одинаковые мрачные туннели катакомб,
     созданных, по-видимому, в незапамятные времена для захоронения усопших,
@@ -947,6 +965,7 @@
       direction: запад
 - id: 850058
   title: "Южный тупик"
+  type: ['пещера']
   description: >-
     Вы зашли в наполовину заваленное камнями помещение, бывшее, по-видимому,
     гробницей какого-то знатного человека. Стены ее покрыты толстым слоем
@@ -959,6 +978,7 @@
       direction: север
 - id: 850059
   title: "Боковой туннель"
+  type: ['пещера']
   description: >-
     Этот узкий туннель тянется с юга на север. Сложно сказать, куда он ведет,
     так как его концы теряются в непроглядной тьме. В жиже, под ногами, с визгом
@@ -973,6 +993,7 @@
       direction: юг
 - id: 850060
   title: "Поворот туннеля"
+  type: ['пещера']
   description: >-
     Здесь узкий туннель древних катакомб поворачивает с востока на юг. Откуда-то
     доносятся хлюпающие звуки перебегающих тварей и их леденящие душу визги и
@@ -986,6 +1007,7 @@
       direction: юг
 - id: 850061
   title: "Северный туннель"
+  type: ['пещера']
   description: >-
     Вы находитесь в тянущемся с запада на восток туннеле древних катакомб,
     населенных разными жуткими тварями. Трудно сказать, почему это некогда
@@ -999,6 +1021,7 @@
       direction: запад
 - id: 850062
   title: "Северный туннель"
+  type: ['пещера']
   description: >-
     Время от времени, на вашем пути попадаются начертанные на заплесневелых стенах
     демонические символы. Они поблескивают в свете факелов зловещими зелеными
@@ -1012,6 +1035,7 @@
       direction: запад
 - id: 850063
   title: "Поворот туннеля"
+  type: ['пещера']
   description: >-
     В этом месте туннель поворачивает с востока на юг. Стены его покрыты ядовитой
     сине-зеленой плесенью, а с потолка капает какая-то вязкая жидкость. Усыпанный
@@ -1024,6 +1048,7 @@
       direction: запад
 - id: 850064
   title: "Боковой туннель"
+  type: ['пещера']
   description: >-
     Этот узкий туннель тянется с юга на север. Сложно сказать, куда он ведет,
     так как его концы теряются в непроглядной тьме. В жиже, под ногами, с
@@ -1038,6 +1063,7 @@
       direction: юг
 - id: 850065
   title: "Боковой туннель"
+  type: ['пещера']
   description: >-
     Судя по всему, эти катакомбы были заброшены много столетий назад. Вскоре
     после этого здесь нашли прибежище всякие мерзкие твари, размножившиеся в
@@ -1052,6 +1078,7 @@
       direction: юг
 - id: 850066
   title: "Поворот туннеля"
+  type: ['пещера']
   description: >-
     Здесь узкий туннель древних катакомб поворачивает с запада на север.
     Откуда-то доносятся хлюпающие звуки перебегающих тварей и их леденящие
@@ -1065,6 +1092,7 @@
       direction: запад
 - id: 850067
   title: "Южный туннель"
+  type: ['пещера']
   description: >-
     Вы находитесь в тянущемся с запада на восток туннеле древних катакомб,
     населенных разными жуткими тварями. Трудно сказать, почему это некогда
@@ -1078,6 +1106,7 @@
       direction: запад
 - id: 850068
   title: "Южный туннель"
+  type: ['пещера']
   description: >-
     Время от времени, на вашем пути попадаются начертанные на заплесневелых
     стенах демонические символы. Они поблескивают в свете факелов зловещими
@@ -1091,6 +1120,7 @@
       direction: запад
 - id: 850069
   title: "Поворот туннеля"
+  type: ['пещера']
   description: >-
     В этом месте туннель поворачивает с севера на восток. Стены его покрыты
     ядовитой сине-зеленой плесенью, а с потолка капает какая-то вязкая жидкость.
@@ -1103,6 +1133,7 @@
       direction: восток
 - id: 850070
   title: "Боковой туннель"
+  type: ['пещера']
   description: >-
     Судя по всему, эти катакомбы были заброшены много столетий назад. Вскоре
     после этого здесь нашли прибежище всякие мерзкие твари, размножившиеся в
