--- a/areas/areas/eastroad/rooms.yml
+++ b/areas/areas/eastroad/rooms.yml
@@ -205,6 +205,7 @@
       direction: юг
 - id: 10914
   title: "Берег Гвендолена"
+  type: ['мелководье']
   description: >-
     Обрывистый берег великой реки поражает своей крутизной. Пожалуй, залезть по нему
     даже проще, чем спуститься. К счастью, на юг ведет довольно широкая дорога, и там
@@ -231,6 +232,7 @@
       direction: запад
 - id: 10916
   title: "Улица разрушенного города"
+  type: ['пустошь']
   description: >-
     Вы находитесь на улице разрушенного Дориата. Похоже, эта улица была раньше
     центральной, ровной и широкой. Сейчас - вся в выбоинах, наполовину заваленная
@@ -312,6 +314,7 @@
       direction: запад
 - id: 10922
   title: "Остатки набережной"
+  type: ['мелководье']
   description: >-
     Когда-то здесь проходила мощеная камнем набережная, по которой прогуливались
     матросы и просто жители города, наслаждаясь влажным бризом Гвендолена. Сейчас здесь
@@ -497,6 +500,7 @@
       direction: север
 - id: 10935
   title: "Вход в город"
+  type: ['пустошь']
   description: >-
     Вы идете сквозь гигантский провал в стене, раньше здесь располагались
     неприступные ворота, но колдовство уничтожило их вместе с немалым участком стены.
@@ -524,6 +528,7 @@
       direction: запад
 - id: 10937
   title: "В стороне от дороги"
+  type: ['пустошь']
   description: >-
     Вы находитесь к северу от дороги, проложенной через разрушенный Дориат. От
     некогда прекрасных зданий теперь остались лишь жалкие, заросшие бурьяном да мелким
@@ -550,6 +555,7 @@
       direction: вверх
 - id: 10939
   title: "Руины Дориата"
+  type: ['пустошь']
   description: >-
     Среди сплошного нагромождения обломков изредка встречаются и относительно
     неплохо сохранившиеся здания. Лишь обвалившаяся крыша выдает, что они заброшены так
@@ -564,6 +570,7 @@
       direction: юг
 - id: 10940
   title: "Остатки улицы"
+  type: ['пустошь']
   description: >-
     Перебираться через развалины зданий трудно и опасно, в любой момент можно
     подвернуть ногу или даже сломать шею. В безопасности среди этого нагромождения
@@ -582,6 +589,7 @@
       direction: юг
 - id: 10941
   title: "В стороне от дороги"
+  type: ['пустошь']
   description: >-
     Вы находитесь на невысоком холме, который с запада и юге огибает широкая,
     мощенная камнем дорога. Отсюда открывается прекрасный вид на близлежащие
@@ -601,6 +609,7 @@
       direction: юг
 - id: 10942
   title: "Среди руин Дориата"
+  type: ['пустошь']
   description: >-
     Вы стоите в стороне от дороги, проложенной прямо через руины старой столицы
     империи - Дориата, и соединяющей Гурбу с Мор-Моркулом. Если взобраться на
@@ -617,6 +626,7 @@
       direction: юг
 - id: 10943
   title: "Площадь разбитых статуй"
+  type: ['пустошь']
   description: >-
     Похоже, что в этом месте раньше была величественная площадь. Тысячи горожан,
     наверняка, собирались здесь во время пышных торжеств. Возможно, именно отсюда
@@ -639,6 +649,7 @@
       direction: юг
 - id: 10944
   title: "Улица разрушенного города"
+  type: ['пустошь']
   description: >-
     По сохранившейся кое-где резьбе на камнях можно сделать вывод, что город был
     выстроен с любовью великими мастерами, умения которых не уступали эльфийским. И тем
@@ -656,6 +667,7 @@
       direction: восток
 - id: 10945
   title: "Остатки баррикад"
+  type: ['пустошь']
   description: >-
     Вы находитесь среди руин Дориата - прежней столицы империи. Если тщательно
     присмотреться, можно понять, что раньше здесь проходила широкая улица, возможно,
@@ -673,6 +685,7 @@
       direction: восток
 - id: 10946
   title: "Недалеко от Звездного Купола"
+  type: ['пустошь']
   description: >-
     Когда-то давно, совсем рядом с этим местом, на севере, возвышалась
     величественная башня, в которой жили маги и проводили время имперские правители.
@@ -688,6 +701,7 @@
       direction: юг
 - id: 10947
   title: "К югу от дороги"
+  type: ['пустошь']
   description: >-
     Иногда при неосторожном шаге нога проваливается в скрытую старой листвой и
     ветками расщелину, так что легко можно переломать себе ноги, или удариться о
@@ -704,6 +718,7 @@
       direction: восток
 - id: 10948
   title: "Тропа меж развалин"
+  type: ['пустошь']
   description: >-
     Вы идете по небольшой тропе, проложенной между остатками стен разрушенных
     домов, и множеством других обломков. На севере тропинка соединяется с дорогой,
@@ -724,6 +739,7 @@
       direction: юг
 - id: 10949
   title: "К югу от дороги"
+  type: ['пустошь']
   description: >-
     Вы находитесь к югу от дороги, соединяющей Гурбу с Мор-Моркулом, с
     других сторон вас окружают мрачные развалины зданий Дориата, а кое-где зияют и
@@ -741,6 +757,7 @@
       direction: восток
 - id: 10950
   title: "Среди руин"
+  type: ['пустошь']
   description: >-
     Со всех сторон вас окружают руины Дориата, под ногами раскиданы крупные и
     мелкие обломки стен зданий, вперемежку с кусочками цветной мозаики, которая некогда
@@ -845,6 +862,7 @@
       direction: юг
 - id: 10957
   title: "Внутри разрушенного дома"
+  type: ['пустошь']
   description: >-
     От здания сохранилось несколько стен, и через оставшиеся в них проемы гуляет,
     завывая, ветер. Дом свободно можно пройти насквозь, выйдя на восток или на запад,
@@ -860,6 +878,7 @@
       direction: юг
 - id: 10958
   title: "Дворцовое подземелье"
+  type: ['пещера']
   description: >-
     Здесь очень сухо и, по всей видимости, безопасно. Подземелье тщательно выложено
     камнем, и, пожалуй, такому подземелью позавидуют иные покои знатного вельможи!
@@ -885,6 +904,7 @@
       direction: запад
 - id: 10960
   title: "Развалины Дориата"
+  type: ['пустошь']
   description: >-
     Судя по расчищенному участку и валяющимся повсюду вокруг обглоданным костям,
     здесь когда-то стояли лагерем орки. И хотя они давно ушли отсюда, само присутствие
@@ -900,6 +920,7 @@
       direction: восток
 - id: 10961
   title: "Около дозорной башни"
+  type: ['пустошь']
   description: >-
     Башня, расположенная на юге отсюда, здорово сохранилась. Похоже, её не
     обстреливали из катапульт, и лишь пожар сыграл свою роль, обвалив перекрытия и
@@ -915,6 +936,7 @@
       direction: юг
 - id: 10962
   title: "К югу от дороги"
+  type: ['пустошь']
   description: >-
     Вы находитесь у восточной границы развалин старой столицы империи - Дориата.
     На севере проходит проложенная через руины дорога, которая ведет от Мор-Моркула к
@@ -931,6 +953,7 @@
       direction: юг
 - id: 10963
   title: "Восточный берег Гвендолена"
+  type: ['пустошь']
   description: >-
     Судя по разрушениям вокруг здесь проходили самые яростные бои, здания разрушены
     практически до основания, а кое-где из земли торчат желтые кости орков, которых так
@@ -946,6 +969,7 @@
       direction: юг
 - id: 10964
   title: "В стороне от дороги"
+  type: ['пустошь']
   description: >-
     Перебираться через развалины зданий трудно и опасно, в любой момент можно
     подвернуть ногу или даже сломать шею. В безопасности среди этого нагромождения
@@ -964,6 +988,7 @@
       direction: юг
 - id: 10965
   title: "К западу от дороги"
+  type: ['пустошь']
   description: >-
     Иногда, в стороне от дороги попадаются сломанные телеги и повозки, это, по всей
     видимости, остатки торговых караванов разграбленные неизвестно кем. Поэтому
@@ -979,6 +1004,7 @@
       direction: юг
 - id: 10966
   title: "Развалины Дориата"
+  type: ['пустошь']
   description: >-
     По сохранившейся кое-где резьбе на камнях можно сделать вывод, что город был
     выстроен с любовью великими мастерами, умения которых не уступали эльфийским. И тем
@@ -992,6 +1018,7 @@
       direction: юг
 - id: 10967
   title: "К югу от дороги"
+  type: ['пустошь']
   description: >-
     Вы находитесь к югу от дороги, проложенной через развалины Дориата,
     называемого также Звездной цитаделью. Этот город бы построен в период могущества
@@ -1007,6 +1034,7 @@
       direction: восток
 - id: 10968
   title: "К северу от дороги"
+  type: ['пустошь']
   description: >-
     Вы находитесь среди развалин прежней столицы империи - Дориата, приемником
     которого ныне стала Гурба. На юге находится проложенная через руины этого
@@ -1024,6 +1052,7 @@
       direction: юг
 - id: 10969
   title: "К северу от дороги"
+  type: ['пустошь']
   description: >-
     Вы находитесь к северу от дороги, проложенной через разрушенный Дориат,
     развалины которого окружают вас со всех сторон. От большинства домов остались лишь
@@ -1037,6 +1066,7 @@
       direction: юг
 - id: 10970
   title: "Около кострища"
+  type: ['пустошь']
   description: >-
     Когда-то здесь располагались казармы городской стражи. Когда орки ворвались в
     город, первым делом они двинулись к казармам. Некроманты нанесли здесь свой страшный
@@ -1050,6 +1080,7 @@
       direction: восток
 - id: 10971
   title: "Стояночное место"
+  type: ['пустошь']
   description: >-
     В этом месте над головой опасно накренилась непонятно как сохранившаяся южная
     стена города, создав, совместно с полуразрушенной стеной домов на востоке и севере,
@@ -1062,6 +1093,7 @@
       direction: запад
 - id: 10972
   title: "Развалины Дориата"
+  type: ['пустошь']
   description: >-
     Вы находитесь у северной границы развалин Дориата, на небольшом холме, дальше
     только один маленький, покосившийся домик, а потом начинаются бескрайние луга. Все
@@ -1082,6 +1114,7 @@
       name: "дверь"
 - id: 10973
   title: "Северная граница руин"
+  type: ['пустошь']
   description: >-
     Здесь, у северной границы руин Дориата, разрушенные дома уже почти полностью
     заросли кустарником и невысокими деревцами. Недалеко на востоке виднеется крутой
@@ -1096,6 +1129,7 @@
       direction: юг
 - id: 10974
   title: "У берега Гвендолена"
+  type: ['пустошь']
   description: >-
     Здесь развалины Дориата граничат с крупнейшей в этих местах рекой - Гвендоленом.
     Поскольку уже давно никто не следит за состоянием набережной, прибрежная часть
@@ -1109,6 +1143,7 @@
       direction: восток
 - id: 10975
   title: "Руины Дориата"
+  type: ['пустошь']
   description: >-
     Вы находитесь у южной границы восточной части Дориата, поделенного
     естественным путем рекой Гвендолен. Путь дальше на юг преграждают остатки глубоко
@@ -1121,6 +1156,7 @@
       direction: север
 - id: 10976
   title: "Руины Дориата"
+  type: ['пустошь']
   description: >-
     Отсюда на север и запад начинаются развалины старой столицы империи - Дориата,
     полностью разграбленного и разрушенного дикими орками. Там из земли
@@ -1135,6 +1171,7 @@
       direction: запад
 - id: 10977
   title: "Развалины Королевского Дворца"
+  type: ['пустошь']
   description: >-
     Раньше величественный дворец, был уже давно сровняв с землей. Западное крыло
     дворца сохранилось немного лучше - там есть даже несколько нетронутых стен, однако
@@ -1156,6 +1193,7 @@
       direction: юг
 - id: 10978
   title: "Остатки богатых домов"
+  type: ['пустошь']
   description: >-
     На главной улице города располагалось раньше немало домов богачей, некоторые
     соревновались по своей роскоши даже с дворцом правителя, обломки стен которого
