--- a/areas/areas/fortavern/rooms.yml
+++ b/areas/areas/fortavern/rooms.yml
@@ -832,6 +832,7 @@
       direction: вниз
 - id: 80147
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     Вы находитесь среди тесных рядов кривоватых лиственных деревьев, практически
     полностью скрывающих небо надо головой, из-за чего в лесу всегда царит полумрак. С
@@ -848,6 +849,7 @@
       direction: юг
 - id: 80148
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     С севера и юга вас тесно обступают плотные ряды кривоватых деревьев, оставляющих
     только на западе и востоке два небольших прохода, ведущих неизвестно куда. Об этих
@@ -865,6 +867,7 @@
       direction: запад
 - id: 80149
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     Вы вышли на круглую, скрытую со всех сторон густыми кустами, лесную поляну. На
     юге, как будто проглядывает широкая тропа, путь по которой будет намного легче и
@@ -894,6 +897,7 @@
       hidden: true
 - id: 80151
   title: "Густые заросли"
+  type: ['лес']
   description: >-
     Вы забрались в самую гущу колючих зарослей, со всех сторон преграждающих путь и
     лишь на севере оставляющих узкий проход к лесной тропе. Это место облюбовали
@@ -908,6 +912,7 @@
       direction: восток
 - id: 80152
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     Как только глаза тут привыкнут к полумраку, который лишь изредка изгоняется
     отсюда одинокими лучами солнца, можно разглядеть мерцающие со всех сторон в
@@ -926,6 +931,7 @@
       hidden: true
 - id: 80153
   title: "Лесной холм"
+  type: ['лес']
   description: >-
     Вы стоите на пологом холме посреди густого дубового леса, деревья в котором
     стоят настолько тесно, что протиснуться мимо них иной раз не представляется
@@ -939,6 +945,7 @@
       direction: запад
 - id: 80154
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     Вы стоите среди тесных рядов диких деревьев, снижающих видимость вокруг всего до
     нескольких футов. Налетающие, время от времени, холодные ветра из глубины леса,
@@ -957,6 +964,7 @@
       hidden: true
 - id: 80155
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     Совсем немного света пробивается через густую листву, которого лишь едва
     достаточно, чтобы рассмотреть древние деревья из последних сил цепляющихся за
@@ -979,6 +987,7 @@
       hidden: true
 - id: 80156
   title: "Лесная поляна"
+  type: ['лес']
   description: >-
     Вы вышли к небольшой поляне посреди дикого леса. Хотя трава тут и достигает в
     высоту до колен, во многих местах она примята, как будто бы здесь недавно прошла
@@ -998,6 +1007,7 @@
       hidden: true
 - id: 80157
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     Даже звонкое журчание небольшого ручья, бьющего здесь из под огромного корня, не
     в силах развеять окружающую это место ауру угнетенности. Древние искривленные
@@ -1019,6 +1029,7 @@
       hidden: true
 - id: 80158
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     Со всех сторон вас окружают плотные ряды старых деревьев, промежутки между
     которыми заполнены густыми кустами так, что невозможно ничего разглядеть даже на
@@ -1032,6 +1043,7 @@
       hidden: true
 - id: 80159
   title: "Поляна со статуями"
+  type: ['лес']
   description: >-
     Попав сюда, сначала испытываешь изумление, среди деревьев возвышаются три
     огромные статуи троллей, застывших в странных позах, а каждая деталь их тела
@@ -1061,6 +1073,7 @@
       hidden: true
 - id: 80160
   title: "Утоптанная тропа"
+  type: ['лес']
   description: >-
     Судя по огромным следам на земле, здесь не так давно проходили великаны. Лишь
     несколько деревьев по сторонам тропы остались нетронутыми, почти у всех либо
@@ -1078,6 +1091,7 @@
       hidden: true
 - id: 80161
   title: "Перед холмом"
+  type: ['лес']
   description: >-
     На востоке от вас возвышается поросший молодыми деревцами холм, в склон которого
     вделана огромная каменная дверь. На земле поблизости белеют старые обглоданные
@@ -1099,6 +1113,7 @@
       name: "каменную дверь"
 - id: 80162
   title: "Пещера"
+  type: ['пещера']
   description: >-
     Вы находитесь в просторной пещере, где царит отвратительная вонь гнили и
     мертвечины, а на земле валяются гнилые кости, среди которых беспорядочно
@@ -1138,6 +1153,7 @@
       name: "каменную дверь"
 - id: 80163
   title: "На краю болота"
+  type: ['болото']
   description: >-
     Ровная покатость, по которой до сих пор приходилось идти, переходит на западе и
     севере в низменное водянистое болото, поросшее редким сосновым лесом. Изредка
@@ -1156,6 +1172,7 @@
       hidden: true
 - id: 80164
   title: "На краю болота"
+  type: ['болото']
   description: >-
     Вы остановились на границе между густым хвойным лесом и болотом, занимающим все
     пространство на западе. Кое-где, из под затянувшего за ночь все вокруг густого
@@ -1172,6 +1189,7 @@
       hidden: true
 - id: 80165
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     Вы находитесь к западу от поляны с тремя грубыми каменными статуями троллей. Со
     всех остальных сторон вас окружают плотные ряды раскидистых деревьев, растущих
@@ -1190,6 +1208,7 @@
       hidden: true
 - id: 80166
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     Вероятно, эти леса когда-то были очень красивым местом, светлыми и зелеными,
     здесь много лиственных пород деревьев: берез, осин, буков. Но после того как
@@ -1205,6 +1224,7 @@
       hidden: true
 - id: 80167
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     В лесу очень тихо, не слышно ни пения птиц, ни звуков других животных. Лишь
     изредка, откуда-то из-за спины, донесется приглушенный шорох, от которого тело
@@ -1222,6 +1242,7 @@
       hidden: true
 - id: 80168
   title: "Дикий лес"
+  type: ['лес']
   description: >-
     С трудом продравшись сквозь отвратительный колючий кустарник, вы оказались
     посреди небольшой поляны, заваленной костями всех размеров. Тут можно найти как
