--- a/areas/areas/oldroad/rooms.yml
+++ b/areas/areas/oldroad/rooms.yml
@@ -34,6 +34,7 @@
       direction: восток
 - id: 66803
   title: "В стороне от дороги"
+  type: ['лес']
   description: >-
     Вы оказались в поросшей невысоким кустарником канаве у дороги, проходящей
     восточнее, что бы вы тут ни искали, вряд ли найдете что-нибудь иное кроме грязи и
@@ -47,6 +48,7 @@
       direction: восток
 - id: 66804
   title: "Дремучий лес"
+  type: ['лес']
   description: >-
     Деревья в этом лесу растут так тесно, что часто пройти между ними можно только
     боком. С одной стороны это неудобство, но с другой стороны, любой, кто крупнее вас,
@@ -60,6 +62,7 @@
       direction: восток
 - id: 66805
   title: "Дремучий лес"
+  type: ['лес']
   description: >-
     Эту часть леса облюбовали для себя вороны, их многочисленными гнездами увешены
     все ближайшие деревья. Не стоит забывать также, что прогулка по птичьему базару
@@ -88,6 +91,7 @@
       direction: восток
 - id: 66807
   title: "Дремучий лес"
+  type: ['лес']
   description: >-
     Вы находитесь к западу от старой лесной дороги тянущейся с севера, от сожженной
     деревеньки, куда-то на юг. Это, наверно, единственное, что можно сказать о этом
@@ -186,6 +190,7 @@
       direction: восток
 - id: 66814
   title: "Дремучий лес"
+  type: ['лес']
   description: >-
     Вас окружают такие густые заросли малины, что становится удивительно, как это
     вам удалось сюда забраться. Но, зато тут можно подкрепиться ароматной и спелой
@@ -199,6 +204,7 @@
       direction: восток
 - id: 66815
   title: "Дремучий лес"
+  type: ['лес']
   description: >-
     Судя по следам вокруг, в малинник приходят полакомиться вкусной ягодой множество
     животных и птиц. Словно в подтверждение этому, какая-то крохотная пичуга,
@@ -219,6 +225,7 @@
       direction: восток
 - id: 66816
   title: "Дремучий лес"
+  type: ['лес']
   description: >-
     Как известно, где малина там и крапива, с опозданием вы вспомнили эту прописную
     истину, почесывая зудящие ожоги. Но ничего не поделаешь, прошлого не воротить,
@@ -316,6 +323,7 @@
       name: "укрепленные ворота"
 - id: 66822
   title: "Дремучий лес"
+  type: ['лес']
   description: >-
     Если судить по ширине стволов, то деревьям в лесу, видимо, не одна сотня лет.
     Сколько историй они смогли бы рассказать, если научились бы вдруг человеческой
@@ -334,6 +342,7 @@
       direction: запад
 - id: 66823
   title: "Дремучий лес"
+  type: ['лес']
   description: >-
     Еще один шаг и вы точно свалились бы в довольно глубокую яму, прикрытую сверху
     хворостом и сухими листьями. К счастью, вы вовремя заметили эту опасность, но
@@ -347,6 +356,7 @@
       direction: запад
 - id: 66824
   title: "Дремучий лес"
+  type: ['лес']
   description: >-
     Эти густые кусты, на изгибе образованном лесной дорогой на востоке и тропой на
     севере, могут послужить удобной западней для любого кто захочет пройти рядом. И,
@@ -362,6 +372,7 @@
       direction: восток
 - id: 66825
   title: "Тропа"
+  type: ['лес']
   description: >-
     Эта тропа намного уже проходящей немного восточнее лесной дороги и по ней едва
     ли без труда пройдет человек. Может этой тропой нечасто пользуются или
@@ -379,6 +390,7 @@
       direction: запад
 - id: 66826
   title: "В стороне от тропы"
+  type: ['лес']
   description: >-
     К радости вы обнаруживаете здесь небольшой, бьющий из под земли ручей с холодной
     и кристально-чистой водой. С юга и запада это место обходит неширокая тропа, а на
@@ -396,6 +408,7 @@
       direction: запад
 - id: 66827
   title: "Поворот тропы"
+  type: ['лес']
   description: >-
     Здесь путь на запад перегораживает несколько поваленных деревьев. По характеру
     их сруба можно с уверенностью утверждать, что это дело рук человека. Тропа огибает
@@ -409,6 +422,7 @@
       direction: восток
 - id: 66828
   title: "Тропа"
+  type: ['лес']
   description: >-
     Отсюда, где тропа поворачивает на юг, и дальше на запад, куда она идет, прямая
     как стрела, путь хорошо расчищен от мусора и всяких репьев, видно, что за ней
@@ -424,6 +438,7 @@
       direction: запад
 - id: 66829
   title: "Тропа"
+  type: ['лес']
   description: >-
     Здесь, рядом с тропой, возвышается дерево с очень густой кроной, откуда
     свешивается веревочная лестница. Это тем более удивительно, так как больше нет
@@ -778,6 +793,7 @@
       direction: юг
 - id: 66855
   title: "В густом лесу"
+  type: ['лес']
   description: >-
     Вы находитесь в густых кустах, в самом центре дикого леса, который угрожающе
     обступил вас со всех сторон. Впрочем, на востоке есть небольшой просвет между
