--- a/areas/areas/spdfor/rooms.yml
+++ b/areas/areas/spdfor/rooms.yml
@@ -13,6 +13,7 @@
       direction: восток
 - id: 66702
   title: "Тропа через лес"
+  type: ['лес']
   description: >-
     По мере углубления в лес, все меньше солнечных лучей пробиваются сквозь кроны
     деревьев, так что в даже в полдень здесь темно, как поздним вечером. Тропа ведущая
@@ -29,6 +30,7 @@
       direction: юг
 - id: 66703
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     Окружающие вас деревья практически лишены листвы, вместо нее их ветви покрыты
     клочьями безобразной серой паутины. Судя по количеству этой паутины, эти леса
@@ -43,6 +45,7 @@
       direction: юг
 - id: 66704
   title: "Высохший лес"
+  type: ['лес']
   description: >-
     Почти все деревья вокруг вас высохли, возможно ненасытные пауки, обитающие в
     этом лесу, высосали из них все соки. На это предположение наталкивает тот факт, что
@@ -55,6 +58,7 @@
       direction: восток
 - id: 66705
   title: "Высохший лес"
+  type: ['лес']
   description: >-
     Почва под ногами больше напоминает высохшую труху, не видно ни опавших листьев,
     ни каких-нибудь трав. Это с одной стороны делает прогулку по лесу приятной, но с
@@ -70,6 +74,7 @@
       direction: восток
 - id: 66706
   title: "Высохший лес"
+  type: ['лес']
   description: >-
     Основной достопримечательностью этой части леса является огромный высохший дуб.
     Он так огромен, что и десять человек, взявшись за руки, вряд ли обхватят его. Кора
@@ -91,6 +96,7 @@
       direction: юг
 - id: 66707
   title: "Высохший лес"
+  type: ['лес']
   description: >-
     Некоторые деревья в этом лесу сломаны, так словно попали в сильную бурю. Иногда
     их ветви вперемешку с обломками стволов свалены в кучи, как будто кто-то специально
@@ -105,6 +111,7 @@
       direction: восток
 - id: 66708
   title: "Густой кустарник"
+  type: ['лес']
   description: >-
     Совершенно непонятным образом, вы вдруг очутились в каком-то отвратительном
     колючем кустарнике. После недолгих раздумий, вы пришли к выводу, что должно быть он
@@ -125,6 +132,7 @@
       direction: юг
 - id: 66709
   title: "Зловещий лес"
+  type: ['лес']
   description: >-
     В некоторых местах леса, в том числе и тут, кроны деревьев так густо опутаны
     паутиной, что это делает почти невозможным прохождение солнечного света. Редкие
@@ -147,6 +155,7 @@
       direction: восток
 - id: 66710
   title: "Зловещий лес"
+  type: ['лес']
   description: >-
     На севере местность постепенно повышается, переходя в невысокий холм, со
     сглаженной вершиной. С его вершины постоянно дует слабый ветерок, чуть-чуть
@@ -168,6 +177,7 @@
       direction: юг
 - id: 66711
   title: "Холм"
+  type: ['лес']
   description: >-
     Северный склон холма слишком крут, чтобы по нему можно было безопасно
     спуститься, но если рискнуть, то усевшись на что-нибудь, например, кусок коры, вы
@@ -181,6 +191,7 @@
       direction: юг
 - id: 66712
   title: "Зловещий лес"
+  type: ['лес']
   description: >-
     Вероятно, лес когда-то был очень красивым местом, светлым и зеленым, здесь много
     лиственных пород деревьев: берез, осин, буков. Сейчас они абсолютно голые и
@@ -203,6 +214,7 @@
       direction: юг
 - id: 66713
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     Стволы и молодых и старых деревьев в этом лесу сильно искривлены, как будто они
     танцевали какой-то дикий танец, а потом внезапно замерли, подчиняясь чьему-то
@@ -225,6 +237,7 @@
       direction: юг
 - id: 66714
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     Повсюду, куда ни кинь взгляд, простирается огромный и некогда величественный
     лес. Его правда портят отвратительные клочья серой паутины, свисающие чуть ли не с
@@ -259,6 +272,7 @@
       direction: юг
 - id: 66716
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     Потеряв на мгновение концентрацию, вы задели ногой какую-то затянутую паутиной
     кочку, откуда начали разбегаться во все стороны сотни крошечных паучат. При этом
@@ -271,6 +285,7 @@
       direction: восток
 - id: 66717
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     Вы находитесь в самой чаще леса, деревья, покрытые толстым слоем паутины,
     окружают вас со всех сторон, и создают впечатление, что они только и ждут момента
@@ -287,6 +302,7 @@
       direction: юг
 - id: 66718
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     В лесу очень тихо, не слышно ни пения птиц, ни звуков других животных. Лишь
     изредка, откуда-то из-за спины, донесется приглушенный шорох, от которого тело
@@ -299,6 +315,7 @@
       direction: восток
 - id: 66719
   title: "Звериная тропа"
+  type: ['лес']
   description: >-
     По тому как тропа утоптана видно, что она проложена очень крупным животным. Даже
     толстые ветви деревьев и кустарника по сторонам обломаны почти под корень, а
@@ -319,6 +336,7 @@
       direction: восток
 - id: 66720
   title: "Звериная тропа"
+  type: ['лес']
   description: >-
     Идти по этой тропе будет легко наверно даже гигантскому троллю, иногда даже
     возникает впечатление, что она проложена людьми, а не животными. Но попадающиеся
@@ -333,6 +351,7 @@
       direction: восток
 - id: 66721
   title: "Перед пещерой"
+  type: ['лес']
   description: >-
     На востоке, прямо перед вами вздымаются под разными углами несколько серых скал,
     образующих в основании широкий проход в пещеру. Что или кто находится в пещере
@@ -348,6 +367,7 @@
       direction: восток
 - id: 66722
   title: "Пещера"
+  type: ['пещера']
   description: >-
     Похоже, что эту пещеру облюбовало в качестве логова какое-то крупное животное.
     По полу пещеры разбросана сухая листва, чтобы удобнее было спать, а на камнях у
@@ -365,6 +385,7 @@
       direction: запад
 - id: 66723
   title: "На небольшой поляне"
+  type: ['лес']
   description: >-
     С трудом продравшись сквозь отвратительный колючий кустарник, вы оказались
     посреди небольшой поляны, заваленной костями всех размеров. Тут можно найти как
@@ -387,6 +408,7 @@
       direction: восток
 - id: 66724
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     Устав удивляться количеству паутины в лесу, вы вдруг обратили внимание на то,
     что она тут разной толщины. Есть паутинки намного тоньше человеческого волоса,
@@ -403,6 +425,7 @@
       direction: юг
 - id: 66725
   title: "Перед спуском в овраг"
+  type: ['лес']
   description: >-
     Хруст хвороста под вашими ногами очень громок, и кажется, что он разносится на
     весь лес, привлекая к вам совсем ненужное внимание. К тому же вы со всех сторон
@@ -417,6 +440,7 @@
       direction: вниз
 - id: 66726
   title: "Овраг"
+  type: ['лес']
   description: >-
     Похоже скапливающаяся на дне оврага вода, никогда не высыхает. Она дает начало
     ручью с такой грязной, гнилой водой, что всякий отважившийся отведать ее,
@@ -430,6 +454,7 @@
       direction: вверх
 - id: 66727
   title: "Овраг"
+  type: ['лес']
   description: >-
     Русло ручья покрыто отсыревшими гнилыми листьями и старыми, грозящими
     рассыпаться в труху, ветками. Все это делает передвижение по дну оврага чрезвычайно
@@ -444,6 +469,7 @@
       direction: восток
 - id: 66728
   title: "Овраг"
+  type: ['лес']
   description: >-
     Стены оврага очень круты, к тому же на них совершенно не за что зацепиться, так
     что в этом месте отсюда выбраться вряд ли удастся. Но, похоже, что западнее овраг
@@ -456,6 +482,7 @@
       direction: восток
 - id: 66729
   title: "Перед болотом"
+  type: ['болото']
   description: >-
     Повсюду на западе, насколько хватает вашего взгляда, простирается заросшее
     камышом и осокой болото. Изредка попадаются, чудом уцепившиеся за ненадежные кочки,
@@ -467,6 +494,7 @@
       direction: восток
 - id: 66730
   title: "Земляной туннель"
+  type: ['пещера']
   description: >-
     Вы находитесь в узком, тут едва вытянешься во весь рост, земляном туннеле. Его
     стены покрыты толстым слоем паутины, который приглушает звук ваших шагов, делая их
@@ -485,6 +513,7 @@
       direction: юг
 - id: 66731
   title: "Земляной туннель"
+  type: ['пещера']
   description: >-
     Прямо перед вами туннель почти под прямым углом поднимается кверху, по всему
     видно, что он создавался не людьми и не для людей. К счастью, слой паутины на
@@ -498,6 +527,7 @@
       direction: вверх
 - id: 66732
   title: "Земляной туннель"
+  type: ['пещера']
   description: >-
     В этом месте туннель резко спускается вниз. В любом другом месте это означало бы
     смертельную опасность, однако здесь, благодаря толстым слоям паутины, вам вряд ли
@@ -511,6 +541,7 @@
       direction: юг
 - id: 66733
   title: "Земляной туннель"
+  type: ['пещера']
   description: >-
     Паутины на стенах здесь так много, что для продвижения вперед приходится,
     постоянно разрывать ее руками. Но даже после этого она норовит прилипнуть и опутать
@@ -569,6 +600,7 @@
       direction: восток
 - id: 66736
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     Даже почва в этом странном лесу покрыта толстым слоем паутины, заглушающим звуки
     шагов. С одной стороны, это позволяет двигаться вам бесшумно, но, с другой стороны,
@@ -581,6 +613,7 @@
       direction: север
 - id: 66737
   title: "Зловещий лес"
+  type: ['лес']
   description: >-
     В очередной раз, наступив на покрытую паутиной, подозрительно мягкую кочку, у
     вас промелькнула мысль, а не труп ли там чей, и еще, что неплохо бы было выжечь всю
@@ -600,6 +633,7 @@
       direction: запад
 - id: 66738
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     В этом лесу не видно ни одного живого существа, кроме, конечно, пауков. Тогда
     чем же они питаются, неужели сами собой? Или исключительно поджидают не совсем
@@ -612,6 +646,7 @@
       direction: север
 - id: 66739
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     Как и в любом лесу, не затронутом влиянием человека, деревья тут растут без
     всякого и намека на порядок. Поэтому тут не мудрено и заблудиться, оказавшись вдруг
@@ -624,6 +659,7 @@
       direction: юг
 - id: 66740
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     Все пространство между деревьями тут, так густо залеплено паутиной, что не
     удается увидеть ни единого кусочка неба. Из-за этого здесь даже в самый ясный день
@@ -643,6 +679,7 @@
       direction: юг
 - id: 66741
   title: "Паучий лес"
+  type: ['лес']
   description: >-
     Иногда, покрытые толстым слоем паутины, деревья принимают такие причудливые
     образы, что остается только диву дивиться. Вот дерево, напоминающее замахнувшегося
