--- a/areas/areas/tookland/rooms.yml
+++ b/areas/areas/tookland/rooms.yml
@@ -1,5 +1,6 @@
 - id: 34700
   title: "Укролье"
+  type: ['луг']
   description: >-
     Чуть севернее проходит Великий Западный тракт, ведущий сначала от Гурбы до
     Гвендоленского моста, а потом пересекающий все Среднеземье. С запада и юга поле
@@ -14,6 +15,7 @@
       direction: юг
 - id: 34701
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы стоите на краю обширной холмистой равнины - Укролья, которую с запада и
     севера огибает Великий Западный тракт, выйдя на который, можно достичь более
@@ -28,6 +30,7 @@
       direction: юг
 - id: 34702
   title: "Укролье"
+  type: ['луг']
   description: >-
     Со всех сторон вас обступает необычно высокая луговая трава, рост которой
     обусловлен превосходной, плодородной почвой и теплым, мягким климатом, чем с
@@ -44,6 +47,7 @@
       direction: юг
 - id: 34703
   title: "Зеленые холмы"
+  type: ['луг']
   description: >-
     Вы поднялись на невысокий пологий холм, на вершине которого растет
     искривленная одинокая сосна. Повсюду на севере и востоке, насколько может охватить
@@ -61,6 +65,7 @@
       direction: юг
 - id: 34704
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы стоите на краю зеленого моря луговых трав, ограниченного на севере Великим
     Западным трактом, по которому время от времени проходят торговые караваны.
@@ -77,6 +82,7 @@
       direction: юг
 - id: 34705
   title: "Укролье"
+  type: ['луг']
   description: >-
     Во все стороны от вас расходится обширная холмистая равнина - Укролье. Вдыхаемый
     аромат полевых трав и трескотня насекомых, как будто просят, чтобы вы остались здесь
@@ -94,6 +100,7 @@
       direction: юг
 - id: 34706
   title: "Укролье"
+  type: ['луг']
   description: >-
     Все, что вы можете приметить тут из достопримечательностей, это пологий холм на
     западе с одиноко растущей искривленной сосной, да проходящая на юге дорога к
@@ -111,6 +118,7 @@
       direction: юг
 - id: 34707
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы находитесь к югу от основной торговой артерии в этом регионе - Великого
     Западного тракта, по которому то и дело проходят богатые караваны. Все остальное
@@ -127,6 +135,7 @@
       direction: юг
 - id: 34708
   title: "Укролье"
+  type: ['луг']
   description: >-
     Со всех сторон вас закрывает высокая луговая трава, в которой может спрятаться
     не только небольшое безобидное животное, но и, пожалуй, даже небольшой передовой
@@ -143,6 +152,7 @@
       direction: юг
 - id: 34709
   title: "Укролье"
+  type: ['луг']
   description: >-
     На этой равнине компанию вам составляют, в основном, лишь многочисленные кролики
     да забавные суслики, крайне удивленные вашим присутствием здесь. Не часто их
@@ -160,6 +170,7 @@
       direction: юг
 - id: 34710
   title: "Укролье"
+  type: ['луг']
   description: >-
     Среди множества самых разнообразных трав, состоящих в основном из представителей
     семейства злаковых, встречается множество и других видов. Так что, при желании, тут
@@ -177,6 +188,7 @@
       direction: юг
 - id: 34711
   title: "Зеленые холмы"
+  type: ['луг']
   description: >-
     Не без труда вы добрались до вершины этого холма, но усилия ваши не прошли
     даром, вам открылась удивительная по красоте картина петляющей на юге среди холмов
@@ -194,6 +206,7 @@
       direction: юг
 - id: 34712
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы стоите на краю, занимающей ощутимую часть Среднеземья, равнины, прозванной
     проживающими тут фермерами Укрольем. На севере проходит Великий Западный тракт.
@@ -209,6 +222,7 @@
       direction: юг
 - id: 34713
   title: "Укролье"
+  type: ['луг']
   description: >-
     Отсюда, во все стороны расходится обширная холмистая равнина, прибежище
     сотен видов животных и птиц, старающихся торопливо скрыться с ваших глаз, едва
@@ -226,6 +240,7 @@
       direction: юг
 - id: 34714
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы стоите рядом с большим валуном, на котором явственно видны следы его
     обработки. Присмотревшись внимательнее можно заметить грубое изображение лица.
@@ -250,6 +265,7 @@
       direction: юг
 - id: 34715
   title: "Укролье"
+  type: ['луг']
   description: >-
     Плодородная почва и мягкий климат этих мест, обеспечивают особую сочность
     полевым травам, идущим в пищу множествам грызунов и травоядным, которые сами, в
@@ -267,6 +283,7 @@
       direction: юг
 - id: 34716
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы стоите среди отдельных рощиц деревьев. На севере расположено Укролье, а на
     юге проходит грунтовая дорога. Восточнее рощицы деревьев расположены так близко
@@ -283,6 +300,7 @@
       direction: юг
 - id: 34717
   title: "Укролье"
+  type: ['луг']
   description: >-
     Севернее вас проходит Великий Западный тракт, выйдя на который можно попасть в
     Гурбу или, перейдя Гвендоленский мост, в другие города Среднеземья.
@@ -298,6 +316,7 @@
       direction: юг
 - id: 34718
   title: "Укролье"
+  type: ['луг']
   description: >-
     Со всех сторон вас обступает высокая, выше человеческого роста, трава, которую,
     вероятно, никто и никогда не косил, а это говорит о том, что поблизости нет никаких
@@ -314,6 +333,7 @@
       direction: юг
 - id: 34719
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы стоите посреди обширной холмистой равнины - Укролья. На западе, если
     раздвинуть высокую луговую траву, можно заметить большой валун странной формы.
@@ -330,6 +350,7 @@
       direction: юг
 - id: 34720
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы находите на краю обширной равнины - Укролья, на юге она постепенно сменяется
     редким смешанным лесом, а на востоке местность начинает заболачиваться.
@@ -346,6 +367,7 @@
       direction: юг
 - id: 34721
   title: "Редкий лес"
+  type: ['лес']
   description: >-
     Отдельные рощицы деревьев здесь начинают располагаться так близко друг к другу,
     что практически сливаются в единый смешанный лес. Восточнее проходит дорога к
@@ -363,6 +385,7 @@
       direction: юг
 - id: 34722
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы стоите южнее Великого Западного тракта, на краю Укролья. В нескольких местах
     вокруг видны проплешины скошенной травы, видимо недалеко деревня или ферма.
@@ -378,6 +401,7 @@
       direction: юг
 - id: 34723
   title: "Укролье"
+  type: ['луг']
   description: >-
     Тут, из под холма, бьет ручей с кристально-чистой, холодной водой, из которого
     можно без опаски утолить жажду и наполнить свою флягу. По вытоптанной вокруг траве,
@@ -395,6 +419,7 @@
       direction: юг
 - id: 34724
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы стоите на южном краю Укролья, дальше находится заболоченная земля с редкими
     зарослями кустарника среди хвоща и осоки.
@@ -410,6 +435,7 @@
       direction: юг
 - id: 34725
   title: "Болотище"
+  type: ['болото']
   description: >-
     Болотистая почва под ногами громко чавкает при каждом вашем шаге, а следы быстро
     заполняются мутной водой. К счастью, южнее более сухо из-за насыпной почвы и
@@ -427,6 +453,7 @@
       direction: юг
 - id: 34726
   title: "Укролье"
+  type: ['луг']
   description: >-
     На запад, юг и восток уходит бескрайняя холмистая равнина, населенная множеством
     видов животных и птиц. Севернее же проходит Великий Западный тракт.
@@ -442,6 +469,7 @@
       direction: юг
 - id: 34727
   title: "Укролье"
+  type: ['луг']
   description: >-
     До сих пор, среди высокой травы, вам попадались на глаза лишь вездесущие
     насекомые, всякие там кузнечики, цикады. Но, в таких зарослях легко могут
@@ -458,6 +486,7 @@
       direction: юг
 - id: 34728
   title: "Укролье"
+  type: ['луг']
   description: >-
     С юга постоянно тянет влажностью, там расположено болото, заросшее осокой и
     камышами. На севере, востоке и западе лежит большая холмистая равнина - Укролье.
@@ -474,6 +503,7 @@
       direction: юг
 - id: 34729
   title: "Болотище"
+  type: ['болото']
   description: >-
     Вы стоите на кочке среди камышей и редких чахлых деревьев. С юга и востока эту
     часть болота огибает насыпная дорога, а на севере до самого горизонта лежит
@@ -491,6 +521,7 @@
       direction: юг
 - id: 34730
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Вы стоите на луге с сочной, высокой травой, которую так любит крупный и мелкий
     рогатый скот. С запада и севера луг огибает Великий Западный тракт.
@@ -506,6 +537,7 @@
       direction: юг
 - id: 34731
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы стоите на одном из поросших высокой травой холмов, типичных для этого
     региона. На востоке находится единственное дерево в округе, хотя и оно, похоже, уже
@@ -522,6 +554,7 @@
       direction: юг
 - id: 34732
   title: "Укролье"
+  type: ['луг']
   description: >-
     Хотя обитателей равнины не так то просто обнаружить, они, тем не менее, каким-то
     образом создают ужасный шум. Постоянно слышится трескотня кузнечиков, скрипы цикад,
@@ -539,6 +572,7 @@
       direction: юг
 - id: 34733
   title: "Укролье"
+  type: ['луг']
   description: >-
     Вы стоите на вершине одинокого пологого холма, нависшего над грунтовой дорогой,
     огибающей его с востока и юга. На севере лежит обширная равнина - Укролье.
@@ -554,6 +588,7 @@
       direction: юг
 - id: 34734
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Вы находитесь посреди луга с сочной, высокой травой, на котором, судя по
     многочисленным следам, пастухи часто пасут свой скот. Луга занимают тут почти всю
@@ -570,6 +605,7 @@
       direction: юг
 - id: 34735
   title: "Около старого дерева"
+  type: ['луг']
   description: >-
     Над вашей головой нависли высохшие ветви старого, бугристого дерева, хотя внутри
     у него, похоже, все еще достаточно крепкая сердцевина, а корни его цепко вцепились
@@ -589,6 +625,7 @@
       direction: юг
 - id: 34736
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Вы стоите севернее пересекающей эти луга дороги к Арлендскому парому, который
     расположен на несколько миль восточнее. С юга почему-то тянет сыростью и запахом
@@ -605,6 +642,7 @@
       direction: юг
 - id: 34737
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Сочная, зеленая трава на этом поле может быть пищей не только для домашнего
     скота, но и для многих диких животных. Так что не удивляйтесь, если встретите
@@ -621,6 +659,7 @@
       direction: юг
 - id: 34738
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Вы стоите посреди зеленого, дающего приют сотням существ, луга. Поблизости,
     насколько хватает вашего взгляда, нет ни одного признака поселения, лишь на западе
@@ -638,6 +677,7 @@
       direction: юг
 - id: 34739
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Вокруг вас раскинулись плодородные луга, тянущиеся до самой реки Гвендолен с
     сочной, высокой травой, служащей пищей для самых разнообразных животных. Чуть южнее
@@ -655,6 +695,7 @@
       direction: юг
 - id: 34740
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Вы находитесь южнее широкой, проторенной дороги известной как Великий Западный
     тракт. Все же остальное пространство занимают, как кажется, бескрайние, плодородные
@@ -672,6 +713,7 @@
       direction: юг
 - id: 34741
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Среди всех множества животных часто пасущихся на этих лугах можно встретить как
     домашних, таких как коровы и овцы, так и диких, таких как не прирученные лошади и
@@ -688,6 +730,7 @@
       direction: юг
 - id: 34742
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Эти луга, благодаря мягкому климату и плодородной почве, способны приносить
     урожай по два раза в год, но из-за малой населенности этих мест, лишь их малая
@@ -705,6 +748,7 @@
       direction: юг
 - id: 34743
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     По мере приближения к реке Гвендолен, трава становится все сочнее, и начинают
     появляться влаголюбивые виды, характерные для берегов рек и озер. О близости реки,
@@ -722,6 +766,7 @@
       direction: юг
 - id: 34744
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     На востоке лежит пшеничное поле, признак того, что кто-то решил воспользоваться
     плодородием этих мест. Они возможно, также, проявят гостеприимство и предложат вам
@@ -739,6 +784,7 @@
       direction: юг
 - id: 34745
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Вы находитесь севернее дороги ведущей к Арлендскому парому. На востоке
     расположено прекрасно обработанное, пшеничное поле. На западе же и севере лежат
@@ -756,6 +802,7 @@
       direction: юг
 - id: 34746
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Вы находитесь на узком отрезке луга, зажатом с севера Великим Западным трактом,
     а с юга пшеничным полем. Вдалеке на востоке виднеется желтоватая поверхность
@@ -821,6 +868,7 @@
       direction: юг
 - id: 34750
   title: "Тучные луга"
+  type: ['луг']
   description: >-
     Тут, на берегу Гвендолен, берущего начало далеко на севере в горном озере и
     текущего до самого моря, расположены самые плодородные, пойменные луга, созданные
@@ -886,6 +934,7 @@
       direction: юг
 - id: 34754
   title: "Берег реки"
+  type: ['мелководье']
   description: >-
     Вы находитесь на пологом берегу реки Гвендолен севернее парома к Арленду. Все
     пространство на севере занимает пшеничное поле, которое уже практически готово к
@@ -1054,6 +1103,7 @@
       direction: юг
 - id: 34766
   title: "Лесной угол"
+  type: ['лес']
   description: >-
     Тут, от основной дороги, ведущей к Арлендскому парому, ответвляется еле
     заметная тропинка ведущая куда-то на юг, в глубь Лесного чертога.
