--- a/areas/areas/woodhall/rooms.yml
+++ b/areas/areas/woodhall/rooms.yml
@@ -1,5 +1,6 @@
 - id: 34800
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вы стоите на северной границе Лесного чертога в подлеске, состоящем в основном
     из молодых дубков, которые чем южнее тем становятся больше, пока окончательно не
@@ -14,6 +15,7 @@
       direction: юг
 - id: 34801
   title: "Узкая тропа"
+  type: ['лес']
   description: >-
     Вы продвигаетесь по еле заметной среди деревьев тропе, ведущей на юг, в глубь
     полного жизни Лесного чертога, где люди не такие уж частые гости. На севере же
@@ -30,6 +32,7 @@
       direction: юг
 - id: 34802
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Земля под ногами, покрытая толстым слоем из опавших дубовых листьев, кое-где
     разрыта, похоже что это место часто посещают дикие свиньи. Поэтому тут следует
@@ -48,6 +51,7 @@
       direction: юг
 - id: 34803
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вы находитесь в молодом дубровнике, где кроны деревьев еще не полностью
     закрывают небо, поэтому жизнь тут кипит ключом. Иногда, благодаря толстому слою
@@ -66,6 +70,7 @@
       direction: юг
 - id: 34804
   title: "Болотище"
+  type: ['болото']
   description: >-
     Эти болота излюбленное место охоты местных жителей на пернатую дичь, которая
     здесь еще не пугана и не пытается тут же скрыться как только заметит человеческое
@@ -83,6 +88,7 @@
       direction: юг
 - id: 34805
   title: "Болотище"
+  type: ['болото']
   description: >-
     Эти болота населены в основном, как кажется, комарами всех разновидностей,
     которые всерьез намерены высосать из любого, имевшего глупость забрести сюда, все
@@ -100,6 +106,7 @@
       direction: юг
 - id: 34806
   title: "Болотище"
+  type: ['болото']
   description: >-
     К югу почва начинает постепенно подниматься и болото переходит в смешанный лес,
     называемым Лесным чертогом. И лишь редкое, громкое хлюпанье поднимающихся со два
@@ -117,6 +124,7 @@
       direction: юг
 - id: 34807
   title: "Болотище"
+  type: ['болото']
   description: >-
     Вы находитесь в густых зарослях камыша у дороги, огибающей этот участок болота
     на западе и севере. О своем присутствии здесь вы оповестили на много миль вокруг, с
@@ -133,6 +141,7 @@
       direction: юг
 - id: 34808
   title: "Болотище"
+  type: ['болото']
   description: >-
     Эти болота отличаются изобилием различных земноводных, служащих пищей болотным
     птицам. Поэтому цапли, аисты, выпи и другая дичь чувствуют себя здесь превосходно,
@@ -150,6 +159,7 @@
       direction: юг
 - id: 34809
   title: "Болотище"
+  type: ['болото']
   description: >-
     Оказавшись тут, сразу ловишь себя на мысли, что здесь как-то уж слишком тихо.
     Даже вездесущее комарье поутихло, а у птиц даже следов не найти. Взглянув на
@@ -168,6 +178,7 @@
       direction: юг
 - id: 34810
   title: "Гибельная трясина"
+  type: ['болото']
   description: >-
     Находясь здесь все еще живым, вам невероятным образом повезло. Видимо, фортуна к
     вам благосклонна. Но, чтобы не испытывать ее терпение слишком долго, лучше бы вам
@@ -186,6 +197,7 @@
       direction: юг
 - id: 34811
   title: "Болотище"
+  type: ['болото']
   description: >-
     С трудом найдя более менее надежный клочок земли под ногами, вы остановились и
     огляделись. На западе и севере по земляной насыпи проходит дорога, а болото
@@ -203,6 +215,7 @@
       direction: юг
 - id: 34812
   title: "Болотище"
+  type: ['болото']
   description: >-
     Благодаря теплому климату растительность этих мест отличается редким
     разнообразием. Тут можно встретить не только такие типичные для болот осоку, камыш,
@@ -298,6 +311,7 @@
       direction: север
 - id: 34820
   title: "Болотище"
+  type: ['болото']
   description: >-
     Если раздвинуть заросли высоких, в человеческий рост, камышей, можно увидеть как
     на востоке болото постепенно переходит в озеро. А, если напрячь память, и вспомнить
@@ -314,6 +328,7 @@
       direction: юг
 - id: 34821
   title: "Утиный пруд"
+  type: ['мелководье']
   description: >-
     Этот пруд уже давно стал  излюбленным местом кормежки водоплавающей птицы, из-за
     обилия рыбы и ракообразных, за что и получил свое название. А, если вы не забыли
@@ -331,6 +346,7 @@
       direction: юг
 - id: 34822
   title: "Утиный пруд"
+  type: ['мелководье']
   description: >-
     Хотя пруд и соседствует с болотами, вода его на удивление чиста и прозрачна,
     вероятно благодаря густым зарослям камыша отфильтровывающим на их границе всю муть
@@ -349,6 +365,7 @@
       direction: юг
 - id: 34823
   title: "Болотище"
+  type: ['болото']
   description: >-
     Здесь Болотище глубоко врезается в Лесной чертог, и среди растущих кривых,
     чахлых деревьев встречается множество полузатопленных стволов. К тому же, тут
@@ -365,6 +382,7 @@
       direction: юг
 - id: 34824
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Тут лес граничит на севере с болотом, поэтому здесь можно встретить
     представителей флоры и фауны как Лесного чертога, так и Болотища. В воздухе
@@ -382,6 +400,7 @@
       direction: юг
 - id: 34825
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вы вышли на крутой, размытый водой берег Утиного пруда, расположенного на
     северо-востоке этого леса. Дальше на север, местность начинает заболачиваться,
@@ -399,6 +418,7 @@
       direction: юг
 - id: 34826
   title: "Утиный пруд"
+  type: ['мелководье']
   description: >-
     В этом месте с юга в пруд, лежащий на севере и востоке, впадает река Плавенка,
     берущая свое начало в дебрях Лесного чертога. На западе находится заросший соснами
@@ -416,6 +436,7 @@
       direction: юг
 - id: 34827
   title: "Утиный пруд"
+  type: ['мелководье']
   description: >-
     Восточнее реку Плавенка перегораживает плотина, в результате чего и образовался
     этот пруд. На юге расположен поросший невысокими деревьями берег, переходящий затем
@@ -433,6 +454,7 @@
       direction: юг
 - id: 34828
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Тут деревья расположены очень близко друг к другу и их кроны образуют сплошной
     полог над головой, препятствующий прохождению солнечных лучей. На востоке однако
@@ -448,6 +470,7 @@
       direction: юг
 - id: 34829
   title: "Узкая тропа"
+  type: ['лес']
   description: >-
     Тропинка, по которой вы продвигаетесь по этому лесу, ведет с севера на
     восток через дубраву вглубь Лесного чертога, туда где царят лишь суровые законы
@@ -465,6 +488,7 @@
       direction: юг
 - id: 34830
   title: "Узкая тропа"
+  type: ['лес']
   description: >-
     Кроны деревьев практически полностью сомкнулись над вашей головой, препятствуя
     проникновению сюда солнечного света, а окружающий лес полон странных звуков. Тропа
@@ -483,6 +507,7 @@
       direction: юг
 - id: 34831
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     В этих лесах обитает множество диких свиней, которые из-за своего плохого
     зрения, могут просто не заметить вашего приближения. И тогда, застигнутые
@@ -500,6 +525,7 @@
       direction: юг
 - id: 34832
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Чем дальше в глубь леса, тем труднее пробираться через бурелом. Места здесь
     дикие и несомненно, что тут водятся хищники, может быть даже волки. Но, как гласит
@@ -517,6 +543,7 @@
       direction: юг
 - id: 34833
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Где-то на востоке слышатся звуки бегущей реки, вероятно там протекает река
     Плавенка, берущая начало в этих дебрях, а потом впадающая в Гвендолен, недалеко от
@@ -534,6 +561,7 @@
       direction: юг
 - id: 34834
   title: "Плавенка"
+  type: ['мелководье']
   description: >-
     Вы стоите по колени в ледяной воде реки Плавенка. Петляя среди древних деревьев,
     она, в конце концов, впадает в Гвендолен где-то на юго-востоке. Рядом проплывают
@@ -551,6 +579,7 @@
       direction: юг
 - id: 34835
   title: "Плавенка"
+  type: ['мелководье']
   description: >-
     Немного севернее река Плавенка впадает В Утиный пруд. В этом месте, на берегах
     реки, полным полно следов самых различных животных, приходящих сюда на водопой.
@@ -568,6 +597,7 @@
       direction: юг
 - id: 34836
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Раздвинув густые лесные заросли вы замечаете на востоке утоптанную дорогу, как
     это ни удивительно, но в этой глуши кто-то живет. Но, возможно, живущие здесь уже
@@ -583,6 +613,7 @@
       direction: восток
 - id: 34837
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Судя по внезапно раздавшемуся, но тут же и прекратившемуся, неподалеку жуткому
     вою, в этих лесах водятся крупные хищники. Лихорадочно осмотревшись, но так ничего
@@ -597,6 +628,7 @@
       direction: восток
 - id: 34838
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Окружающие деревья застыли в странных позах, как-будто примерили себе
     разнообразные гротескные личины, иногда смеющиеся над вами, иногда скривившиеся в
@@ -614,6 +646,7 @@
       direction: юг
 - id: 34839
   title: "Узкая тропа"
+  type: ['лес']
   description: >-
     Окинув взглядом окрестности, вы видите только застывшие в причудливых позах
     молчаливые и печальные деревья. За свою жизнь они повидали немало, и возможно
@@ -631,6 +664,7 @@
       direction: юг
 - id: 34840
   title: "Узкая тропа"
+  type: ['лес']
   description: >-
     Тут тропа неожиданно заканчивается, упираясь в обступившие с трех сторон стены
     леса и густого кустарника, лишь на западе виднее небольшой просвет между деревьями.
@@ -648,6 +682,7 @@
       direction: юг
 - id: 34841
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Тут, среди змеящихся корней столетних деревьев, бьет из под земли ручей с
     чистой, холодной водой, невольно заставляющий любоваться игрой света в струящейся
@@ -665,6 +700,7 @@
       direction: юг
 - id: 34842
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     В очередной раз запнувшись за, некстати торчащий из земли, древесный корень, вы
     разразились ругательствами и проклятиями, от которых ненадолго смолкли пораженные
@@ -682,6 +718,7 @@
       direction: юг
 - id: 34843
   title: "Плавенка"
+  type: ['мелководье']
   description: >-
     Стоя по колени в холодной воде реки, вам постоянно приходят невеселые мысли о
     том, для чего вы сюда забрели. Реки очень чистая и на ее дне можно ясно разглядеть
@@ -700,6 +737,7 @@
       direction: юг
 - id: 34844
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вы находитесь на берегу реки Плавенка, среди густых лесных зарослей, из которых
     в любую минуту может выскочить какой-нибудь крупный зверь и полакомится вашим
@@ -716,6 +754,7 @@
       direction: юг
 - id: 34845
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Услышав, как где-то поблизости раздался странный шум, вам совершенно некстати
     вспомнилось, что тут водятся достаточно крупные хищники, например, такие как
@@ -730,6 +769,7 @@
       direction: восток
 - id: 34846
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Услышав, как где-то поблизости раздался странный шум, вам совершенно некстати
     вспомнилось, что тут водятся достаточно крупные хищники, например, такие как
@@ -748,6 +788,7 @@
       direction: юг
 - id: 34847
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вокруг находятся густые заросли орешника, плоды которого являются основным
     компонентом меню не только белок, но и некоторых других животных. Судя по следам на
@@ -765,6 +806,7 @@
       direction: юг
 - id: 34848
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вы находитесь в самых дебрях Лесного чертога, вдали от каких-либо населенных
     людьми мест. Случись что, и вам придется рассчитывать только на себя, никто другой
@@ -782,6 +824,7 @@
       direction: юг
 - id: 34849
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Окрестные леса славятся своими грибами, лакомиться которыми так любят местные жители.
     Белые грибы, лисички, грузди - эти названия вызывают у них обильное слюноотделение.
@@ -799,6 +842,7 @@
       direction: юг
 - id: 34850
   title: "Плавенка"
+  type: ['мелководье']
   description: >-
     Здесь, в дебрях Лесного чертога, берет свое начало река Плавенка. Хотя пока
     ничего не выдает в этом, вытекающем из под покрытого мхом валуна, ручье главного в
@@ -816,6 +860,7 @@
       direction: юг
 - id: 34851
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вы находитесь в дебрях Лесного чертога - диких, глухих местах, где полно
     различных хищников, но к счастью нет нечисти, типа орков. На востоке берет свое
@@ -830,6 +875,7 @@
       direction: запад
 - id: 34852
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вы попали в заросший крапивой и малиной овраг, достаточно пологие, для того
     чтобы выбраться отсюда,  склоны которого только на севере и востоке. Но, для этого
@@ -843,6 +889,7 @@
       direction: восток
 - id: 34853
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вы попали в самое, что ни есть, грибное место. Они тут везде: на трухлявых пнях,
     поваленных деревьях, да и просто на земле, среди узловатых корней. Любой грибник,
@@ -860,6 +907,7 @@
       direction: юг
 - id: 34854
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Остановившись на мгновение, перевести дух, вы вдруг осознаете, что вокруг
     разлито волшебное умиротворение. Песни птиц тут звучат по-особенному чисто и
@@ -878,6 +926,7 @@
       direction: юг
 - id: 34855
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вы находитесь в чащобе Лесного чертога, но деревья здесь моложе и стоят реже.
     Они больше не давят на вас со всех сторон, а наоборот как будто приглашают вас
@@ -895,6 +944,7 @@
       direction: юг
 - id: 34856
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вы стоите на вершине большого холма, на котором не растет ни единого деревца,
     хотя кругом густой лес. В народе такие места называют Лысыми горами, и считается,
@@ -914,6 +964,7 @@
       direction: запад
 - id: 34857
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Внезапно, вы обратили внимание на то какие тут удивительно красивые деревья, как
     будто сошедшие с полотнища художника пейзажиста. К тому же, они здесь выше и толще,
@@ -927,6 +978,7 @@
       direction: восток
 - id: 34858
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     В этой части леса удивительные деревья, они тут более высокие и стройные, а
     листва их такого нежного зеленого цвета, что почему-то начинают приходить мысли о
@@ -942,6 +994,7 @@
       direction: восток
 - id: 34859
   title: "Лесной чертог"
+  type: ['лес']
   description: >-
     Вы остановились словно во сне, с юга льются чудесные песни. И все вокруг как
     будто преобразилось под воздействием их магии. Так петь могут только эльфы, и
